<resources>
    <string name="app_name">Movies App</string>
    <string name="list_fragment_label">Popular Films</string>
    <string name="error_text">There is a connection error. Please try again!</string>
    <string name="search_text">Search</string>
    <string name="separator">|</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duration">Duration</string>
    <string name="year">Year</string>
    <string name="language">Language</string>
    <string name="rating">Rating</string>
    <string name="plot">Plot</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="actors">Actors</string>
    <string name="country">Country</string>
    <string name="box_office">Box Office</string>
    <string name="favourites_menu_title">Favourites selected</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="retry_btn">Retry</string>
    <string name="no_result">No results found for this query</string>
    <string name="empty_text">Use the search bar to start searching for your favourite movies</string>
</resources>