<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="movieDetailsObjectRoom" type="com.example.movieapp.data.model.MovieDetailsResponse" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.moviedetails.MovieDetailsFragment">

        <ProgressBar
            android:id="@+id/progressBarRoomDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutRoomDetails"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imageViewMovieDetailsPoster"
                    android:layout_width="240dp"
                    android:layout_height="360dp"
                    android:downloadUrl="@{movieDetailsObjectRoom.poster}"
                    android:layout_marginStart="@dimen/size_100"
                    android:layout_marginTop="@dimen/size_100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/batman_poster" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="@dimen/size_100"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewMovieDetailsPoster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewMovieDetailsPoster"
                    app:layout_constraintTop_toTopOf="@+id/imageViewMovieDetailsPoster">

                    <TextView
                        android:id="@+id/textViewDuration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text='@{movieDetailsObjectRoom.runtime}'
                        tools:text="123 min"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="@style/MainTitle" />

                    <TextView
                        android:id="@+id/textViewDurationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/duration"
                        android:layout_marginBottom="15dp"
                        android:textAppearance="@style/Description" />

                    <TextView
                        android:id="@+id/textViewYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:text="2011"
                        android:text='@{movieDetailsObjectRoom.year}'
                        android:layout_marginBottom="5dp"
                        android:textAppearance="@style/MainTitle" />

                    <TextView
                        android:id="@+id/textViewYearText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/year"
                        android:layout_marginBottom="15dp"
                        android:textAppearance="@style/Description" />

                    <TextView
                        android:id="@+id/textViewLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:text='@{movieDetailsObjectRoom.language}'
                        android:textAlignment="center"
                        android:textAppearance="@style/MainTitle"
                        tools:text="English" />

                    <TextView
                        android:id="@+id/textViewLanguageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/language"
                        android:layout_marginBottom="15dp"
                        android:textAppearance="@style/Description" />

                    <TextView
                        android:id="@+id/textViewRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:text="9.4/10"
                        android:text='@{movieDetailsObjectRoom.rating +"/10"}'
                        android:layout_marginBottom="5dp"
                        android:textAppearance="@style/MainTitle" />

                    <TextView
                        android:id="@+id/textViewRatingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/rating"
                        android:textAppearance="@style/Description" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewMovieDetailsPoster">

                    <TextView
                        android:id="@+id/textViewPlotText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plot"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="@style/MainTitle" />

                    <TextView
                        android:id="@+id/textViewPlot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Content"
                        android:layout_marginBottom="18dp"
                        android:text='@{movieDetailsObjectRoom.plot}'
                        tools:text="When part of gotham is turned into a private reserve for criminals known as Arkham City." />

                    <TextView
                        android:id="@+id/textViewDirectorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="@style/MainTitle" />

                    <TextView
                        android:id="@+id/textViewDirector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Content"
                        android:layout_marginBottom="18dp"
                        android:text='@{movieDetailsObjectRoom.director}'
                        tools:text="Tarantino" />

                    <TextView
                        android:id="@+id/textViewWriterText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/writer"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="@style/MainTitle" />

                    <TextView
                        android:id="@+id/textViewWriter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Content"
                        android:layout_marginBottom="18dp"
                        android:text='@{movieDetailsObjectRoom.writer}'
                        tools:text="Tarantino, Nolan" />

                    <TextView
                        android:id="@+id/textViewActorsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actors"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="@style/MainTitle" />

                    <TextView
                        android:id="@+id/textViewActors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Content"
                        android:layout_marginBottom="18dp"
                        android:text='@{movieDetailsObjectRoom.actors}'
                        tools:text="Tarantino, Nolan, Troy Baker, Eric Bauza" />

                    <TextView
                        android:id="@+id/textViewCountryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="@style/MainTitle" />

                    <TextView
                        android:id="@+id/textViewCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Content"
                        android:layout_marginBottom="18dp"
                        android:text='@{movieDetailsObjectRoom.country}'
                        tools:text="UK, USA" />

                    <TextView
                        android:id="@+id/textViewBoxOfficeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/box_office"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="@style/MainTitle" />

                    <TextView
                        android:id="@+id/textViewBoxOffice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Content"
                        android:layout_marginBottom="18dp"
                        android:text='@{movieDetailsObjectRoom.boxOffice}'
                        tools:text="Disney Studios" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>